WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194141
[curl] [WebKit] Assertion failures of missing networkStorageSession for storage/indexeddb tests
https://bugs.webkit.org/show_bug.cgi?id=194141
Summary
[curl] [WebKit] Assertion failures of missing networkStorageSession for stora...
Fujii Hironori
Reported
2019-01-31 22:27:00 PST
[curl] [WebKit] Assertion failures of missing networkStorageSession for storage/indexeddb tests WebKitTestRunners are craching due to assertion failure. storage/indexeddb/basics-private.html
> ASSERTION FAILED: storageSession > ..\..\Source\WebKit\NetworkProcess/NetworkSession.cpp(64) : networkStorageSession > 1 00007FF8ACB31429 WTFCrash > 2 00007FF86EE12A00 WTFCrashWithInfo > 3 00007FF86F09F2C6 WebKit::NetworkSession::networkStorageSession > 4 00007FF86EEA57A8 WebKit::NetworkSessionCurl::NetworkSessionCurl > 5 00007FF86F0C8FFC WebKit::NetworkSessionCurl::create > 6 00007FF86F09F11A WebKit::NetworkSession::create > 7 00007FF86EEA5D09 WebKit::RemoteNetworkingContext::ensureWebsiteDataStoreSession > 8 00007FF86F09F9C8 WebKit::NetworkProcess::addWebsiteDataStore > 9 00007FF86F0721CD WebKit::NetworkConnectionToWebProcess::ensureLegacyPrivateBrowsingSession > 10 00007FF86EF28B78 IPC::callMemberFunctionImpl<WebKit::NetworkConnectionToWebProcess,void (WebKit::NetworkConnectionToWebProcess::*)(),std::tuple<>> > 11 00007FF86EF28A96 IPC::callMemberFunction<WebKit::NetworkConnectionToWebProcess,void (WebKit::NetworkConnectionToWebProcess::*)(),std::tuple<>,std::integer_sequence<unsigned long long> > > 12 00007FF86EF13894 IPC::handleMessage<Messages::NetworkConnectionToWebProcess::EnsureLegacyPrivateBrowsingSession,WebKit::NetworkConnectionToWebProcess,void (WebKit::NetworkConnectionToWebProcess::*)()> > 13 00007FF86EF10B75 WebKit::NetworkConnectionToWebProcess::didReceiveNetworkConnectionToWebProcessMessage > 14 00007FF86F06F327 WebKit::NetworkConnectionToWebProcess::didReceiveMessage > 15 00007FF86F1CA516 IPC::Connection::dispatchMessage > 16 00007FF86F1C431F IPC::Connection::dispatchMessage > 17 00007FF86F1CACAD IPC::Connection::dispatchOneIncomingMessage > 18 00007FF86F1D0D2C IPC::Connection::enqueueIncomingMessage::<unnamed-tag>::operator() > 19 00007FF86F1D0C87 WTF::Function<void ()>::CallableWrapper<`lambda at ..\..\Source\WebKit\Platform\IPC\Connection.cpp:952:30'>::call > 20 00007FF8ACB444C0 WTF::Function<void ()>::operator() > 21 00007FF8ACB941B6 WTF::RunLoop::performWork > 22 00007FF8ACC4E1B5 WTF::RunLoop::wndProc > 23 00007FF8ACC4E0C9 WTF::RunLoop::RunLoopWndProc > 24 00007FF8D3736D41 CallWindowProcW > 25 00007FF8D3736713 DispatchMessageW > 26 00007FF8ACC4E483 WTF::RunLoop::run > 27 00007FF86EE12215 WebKit::AuxiliaryProcessMain<WebKit::NetworkProcess,WebKit::AuxiliaryProcessMainBase> > 28 00007FF86EE1109B WebKit::NetworkProcessMainWin > 29 00007FF7F9E0101C main > 30 00007FF7F9E01234 __scrt_common_main_seh > 31 00007FF8D3A43DC4 BaseThreadInitThunk
Attachments
Patch
(2.29 KB, patch)
2019-01-31 22:29 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-01-31 22:29:59 PST
Created
attachment 360834
[details]
Patch
Fujii Hironori
Comment 2
2019-02-03 18:16:25 PST
Comment on
attachment 360834
[details]
Patch Clearing flags on attachment: 360834 Committed
r240914
: <
https://trac.webkit.org/changeset/240914
>
Fujii Hironori
Comment 3
2019-02-03 18:16:28 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-02-03 18:17:28 PST
<
rdar://problem/47776277
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug