[curl] [WebKit] Assertion failures of missing networkStorageSession for storage/indexeddb tests https://bugs.webkit.org/show_bug.cgi?id=194141

Reviewed by Ross Kirsling.

Implemented WebKit::NetworkProcess::switchToNewTestingSession and
WebKit::NetworkProcess::ensureSession for curl port.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::switchToNewTestingSession):
(WebKit::NetworkProcess::ensureSession):

Canonical link: https://commits.webkit.org/208676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240914 268f45cc-cd09-0410-ab3c-d52691b4dbfc